--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <div class="juego">
             <div class="tapCircle">
                 <button class="btn-inicio" onclick="iniciarJuego()" id="btn-inicio"><h1>¡Iniciar juego!</h1></button>
+                <audio id="chillMusic" class="music" controls src="./audio/y2mate.com - Chill Lo-fi Hip-Hop Beats FREE _ Lofi Hip Hop Chillhop Music Mix _ GEMN.mp3"></audio>
+                <audio id="correct" src="./audio/476178__unadamlar__correct-choice.wav"></audio>
+                <audio id="gameOver" src="./audio/159408__noirenex__life-lost-game-over.wav"></audio>
+                <div class="counter" id="contador"></div>
                 <div class="boton rojo" id="rojo" data-color="rojo"></div>
                 <div class="boton amarillo" id="amarillo" data-color="amarillo"></div>
                 <div class="boton naranja" id="naranja" data-color="naranja"></div>
